# pints

./: .gitignore  Pints_raw_data.csv  Pints_raw_data_2.csv  README.md  pyproject.toml  run.sh
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  test.db
backend/app/repositories/: sql.py
backend/app/routes/: record.py  stats.py
backend/app/services/: record.py  stats.py
backend/scripts/: load_pint_data.py  pints_data.py  pints_input_data_clean_up.py  pints_input_data_service.py  update_pints_data.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  styles.css
frontend/src/components/: AddPint.jsx  Dashboard.jsx  LandingPage.jsx  Navbar.jsx  PintTable.jsx
frontend/src/styles/: ag-grid-pubtracker.css  chart.css  global.css  index.css  landing.css  leaderboard.css  table.css
frontend/src/utils/: chartConfig.js
geo-jsons/: camden.geo.json  city-of-london.geo.json  city-of-westminster.geo.json  greenwich.geo.json  hackney.geo.json  hammersmith-and-fulham.geo.json  islington.geo.json  kensington-and-chelsea.geo.json  lambeth.geo.json  lewisham.geo.json  southwark.geo.json  tower-hamlets.geo.json  wandsworth.geo.json
src/: update_pints_data.py  update_pints_info.py
src/lib/: clean_up_input_data.py  geo_pints_info.py  pints_data.py  pints_info.py
ui/: index.js  main.html  package-lock.json  package.json  style.css
ui/data/: pints_info.json
ui/data/geo-jsons/: camden.geo.json  city-of-london.geo.json  companyLeaderboard.json  (+11 more)
ui/scratchpad/: index.js  main.html  style.css
(+2 files in other folders)
