[project]
name = "pints"
version = "0.1.0"
description = "Pints!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "google-api-python-client>=2.177.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "shapely>=2.0.7",
]
[tool.setuptools]
packages = ["backend"]
